[package]
name = "eth-encode-packed"
version = "0.1.0"
edition = "2018"
homepage = "https://github.com/roberts-ivanovs/eth-encode-packed-rs"
license = "MIT"
authors = [
    "Roberts Ivanovs <robertsivanovs1999@gmail.com>",
]
keywords = ["ethereum", "eth", "abi", "solidity"]
description = "Easy to use replica of Solidity abi.encodePacked."

[dependencies]
ethabi = "14.1.0"
hex = "0.4.3"
